tests/test_compile/cases/temp_field.stderr
error[E0063]: missing field `field_a` in initializer of `Test1`
 --> tests/test_compile/cases/temp_field.rs:4:10
  |
4 | #[derive(DekuRead, DekuWrite)]
  |          ^^^^^^^^ missing `field_a`
  |
  = note: this error originates in the derive macro `DekuRead` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0027]: pattern does not mention field `field_a`
 --> tests/test_compile/cases/temp_field.rs:4:20
  |
4 | #[derive(DekuRead, DekuWrite)]
  |                    ^^^^^^^^^ missing field `field_a`
  |
  = note: this error originates in the derive macro `DekuWrite` (in Nightly builds, run with -Z macro-backtrace for more info)
help: include the missing field in the pattern
  |
4 | #[derive(DekuRead, DekuWrite { field_a })]
  |                              +++++++++++
help: if you don't care about this missing field, you can explicitly ignore it
  |
4 | #[derive(DekuRead, DekuWrite { .. })]
  |                              ++++++
